[package]
name = "acommit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "acommit"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
dialoguer = "0.11"
